[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/root/popups/config/settings/system/SystemEditor.gd" type="Script" id=1]

[node name="SystemEditor" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
focus_mode = 2
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 1024.0
margin_bottom = 98.0

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 80.0
margin_bottom = 98.0

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_right = 80.0
margin_bottom = 14.0
text = "Photo:"

[node name="Photo" type="Button" parent="HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 18.0
margin_right = 80.0
margin_bottom = 98.0
rect_min_size = Vector2( 80, 80 )
focus_neighbour_bottom = NodePath("../../../HBoxContainer3/Name")
clip_text = true
expand_icon = true

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 84.0
margin_right = 1024.0
margin_bottom = 98.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer2"]
margin_right = 940.0
margin_bottom = 14.0
text = "Logo:"

[node name="Logo" type="Button" parent="HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
margin_top = 18.0
margin_right = 940.0
margin_bottom = 98.0
focus_neighbour_bottom = NodePath("../../../HBoxContainer3/Name")
size_flags_horizontal = 3
size_flags_vertical = 3
clip_text = true
expand_icon = true

[node name="HSeparator" type="HSeparator" parent="."]
margin_top = 102.0
margin_right = 1024.0
margin_bottom = 106.0

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
margin_top = 110.0
margin_right = 1024.0
margin_bottom = 124.0

[node name="Label" type="Label" parent="HBoxContainer2"]
margin_right = 67.0
margin_bottom = 14.0
text = "Identifier: "

[node name="Identifier" type="Label" parent="HBoxContainer2"]
unique_name_in_owner = true
margin_left = 71.0
margin_right = 1024.0
margin_bottom = 14.0
size_flags_horizontal = 3
autowrap = true

[node name="HBoxContainer3" type="HBoxContainer" parent="."]
margin_top = 128.0
margin_right = 1024.0
margin_bottom = 152.0

[node name="Label" type="Label" parent="HBoxContainer3"]
margin_top = 5.0
margin_right = 46.0
margin_bottom = 19.0
text = "Name: "

[node name="Name" type="LineEdit" parent="HBoxContainer3"]
unique_name_in_owner = true
margin_left = 50.0
margin_right = 1024.0
margin_bottom = 24.0
size_flags_horizontal = 3
placeholder_text = "System name"
caret_blink = true
caret_blink_speed = 0.5

[node name="HBoxContainer4" type="HBoxContainer" parent="."]
margin_top = 156.0
margin_right = 1024.0
margin_bottom = 176.0

[node name="Label" type="Label" parent="HBoxContainer4"]
margin_top = 3.0
margin_right = 63.0
margin_bottom = 17.0
text = "Category: "

[node name="Category" type="OptionButton" parent="HBoxContainer4"]
unique_name_in_owner = true
margin_left = 67.0
margin_right = 147.0
margin_bottom = 20.0
text = "Console"
items = [ "Console", null, false, 0, null, "Arcade", null, false, 1, null, "Computer", null, false, 2, null, "Game Engine", null, false, 3, null, "Modern Console", null, false, 4, null ]
selected = 0

[node name="HBoxContainer6" type="HBoxContainer" parent="."]
margin_top = 180.0
margin_right = 1024.0
margin_bottom = 200.0

[node name="Label" type="Label" parent="HBoxContainer6"]
margin_top = 3.0
margin_right = 147.0
margin_bottom = 17.0
text = "Supported extensions: "

[node name="Category" type="OptionButton" parent="HBoxContainer6"]
margin_left = 151.0
margin_right = 231.0
margin_bottom = 20.0
focus_neighbour_bottom = NodePath("../../HBoxContainer5/HBoxContainer/AddEmulator")
text = "Console"
items = [ "Console", null, false, 0, null, "Arcade", null, false, 1, null, "Computer", null, false, 2, null, "Game Engine", null, false, 3, null, "Modern Console", null, false, 4, null ]
selected = 0

[node name="HBoxContainer5" type="HBoxContainer" parent="."]
margin_top = 204.0
margin_right = 1024.0
margin_bottom = 224.0

[node name="Label" type="Label" parent="HBoxContainer5"]
margin_top = 3.0
margin_right = 72.0
margin_bottom = 17.0
text = "Emulators: "

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer5"]
margin_left = 879.0
margin_right = 1024.0
margin_bottom = 20.0
size_flags_horizontal = 10

[node name="AddEmulator" type="Button" parent="HBoxContainer5/HBoxContainer"]
unique_name_in_owner = true
margin_right = 37.0
margin_bottom = 20.0
focus_neighbour_top = NodePath("../../../HBoxContainer6/Category")
text = "Add"

[node name="EditEmulator" type="Button" parent="HBoxContainer5/HBoxContainer"]
unique_name_in_owner = true
margin_left = 41.0
margin_right = 77.0
margin_bottom = 20.0
focus_neighbour_top = NodePath("../../../HBoxContainer6/Category")
text = "Edit"

[node name="RemoveEmulator" type="Button" parent="HBoxContainer5/HBoxContainer"]
unique_name_in_owner = true
margin_left = 81.0
margin_right = 145.0
margin_bottom = 20.0
focus_neighbour_top = NodePath("../../../HBoxContainer6/Category")
text = "Remove"

[node name="Emulators" type="Tree" parent="."]
unique_name_in_owner = true
margin_top = 228.0
margin_right = 1024.0
margin_bottom = 596.0
rect_min_size = Vector2( 0, 250 )
size_flags_horizontal = 3
size_flags_vertical = 3
hide_root = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_top = 600.0
margin_right = 1024.0
margin_bottom = 600.0
